// è®¤è¯ç›¸å…³
class Auth {
    static async login(username, password) {
        try {
            console.log('ğŸ” å¼€å§‹ç™»å½•ï¼Œç”¨æˆ·å:', username);
            console.log('ğŸ“¡ è°ƒç”¨ gRPC ç½‘å…³: /auth/login');
            
            const response = await api.post('/auth/login', {
                username,
                password
            });
            
            console.log('âœ… ç™»å½•å“åº”:', response);
            
            if (response && response.access_token) {
                localStorage.setItem(TOKEN_KEY, response.access_token);
                console.log('âœ… ç™»å½•æˆåŠŸï¼Œtoken å·²ä¿å­˜åˆ° localStorage');
                return true;
            }
            
            console.warn('âš ï¸ ç™»å½•å“åº”ä¸­æ²¡æœ‰ access_token');
            console.warn('å“åº”å†…å®¹:', JSON.stringify(response, null, 2));
            throw new Error('ç™»å½•å“åº”æ ¼å¼é”™è¯¯ï¼šç¼ºå°‘ access_token');
            
        } catch (error) {
            console.error('âŒ Login error:', error);
            console.error('é”™è¯¯è¯¦æƒ…:', error.message);
            if (error.stack) {
                console.error('é”™è¯¯å †æ ˆ:', error.stack);
            }
            
            // æä¾›æ›´å‹å¥½çš„é”™è¯¯ä¿¡æ¯
            let errorMessage = 'ç™»å½•å¤±è´¥';
            if (error.message) {
                errorMessage = error.message;
                // å¦‚æœæ˜¯ç”¨æˆ·åå¯†ç é”™è¯¯ï¼Œç›´æ¥æ˜¾ç¤º
                if (error.message.includes('ç”¨æˆ·åæˆ–å¯†ç é”™è¯¯') || error.message.includes('401')) {
                    errorMessage = 'ç”¨æˆ·åæˆ–å¯†ç é”™è¯¯';
                }
            } else if (error.name === 'TypeError' && error.message && error.message.includes('fetch')) {
                errorMessage = 'æ— æ³•è¿æ¥åˆ°æœåŠ¡å™¨ï¼Œè¯·æ£€æŸ¥ç½‘ç»œè¿æ¥å’ŒæœåŠ¡æ˜¯å¦å¯åŠ¨';
            } else if (error.message && error.message.includes('gRPC')) {
                errorMessage = 'æœåŠ¡å™¨é€šä¿¡é”™è¯¯ï¼Œè¯·ç¨åé‡è¯•';
            }
            
            throw new Error(errorMessage);
        }
    }

    static logout() {
        localStorage.removeItem(TOKEN_KEY);
        window.location.href = 'login.html';
    }

    static isAuthenticated() {
        return !!localStorage.getItem(TOKEN_KEY);
    }

    static checkAuth() {
        if (!this.isAuthenticated()) {
            window.location.href = 'login.html';
        }
    }
}

// ç”¨æˆ·ä¿¡æ¯å­˜å‚¨ï¼ˆç”¨äºè·¨é¡µé¢å…±äº«ï¼‰
class UserInfo {
    static KEY = 'bazi_user_info';
    
    static save(solar_date, solar_time, gender) {
        const info = {
            solar_date,
            solar_time,
            gender,
            timestamp: Date.now()
        };
        localStorage.setItem(this.KEY, JSON.stringify(info));
    }
    
    static load() {
        const infoStr = localStorage.getItem(this.KEY);
        if (infoStr) {
            try {
                return JSON.parse(infoStr);
            } catch (e) {
                return null;
            }
        }
        return null;
    }
    
    static clear() {
        localStorage.removeItem(this.KEY);
    }
    
    static fillForm() {
        const info = this.load();
        if (info) {
            const dateInput = document.getElementById('solar_date');
            const timeInput = document.getElementById('solar_time');
            const genderSelect = document.getElementById('gender');
            
            if (dateInput) dateInput.value = info.solar_date || '';
            if (timeInput) timeInput.value = info.solar_time || '';
            if (genderSelect) genderSelect.value = info.gender || 'male';
        }
    }
}


